August_30/August_30/src/objects/Project_Status__c.object
<CustomObject>
    <fields>
        <fullName>Budget_Comments__c</fullName>
        <label>Budget Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <formula>IMAGE(
IF(ISPICKVAL(Status__c, "Red"), "/resource/red", IF(ISPICKVAL(Status__c, "Green"), "/resource/green", IF(ISPICKVAL(Status__c, "Yellow"), "/resource/yellow", "/resource/green"))), " "
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budgets__c</fullName>
        <formula>IMAGE( 
IF(ISPICKVAL(Schedule_Status__c, "Red"), "/resource/red", IF(ISPICKVAL(Schedule_Status__c, "Green"), "/resource/green", IF(ISPICKVAL(Schedule_Status__c, "Yellow"), "/resource/yellow", "/resource/green"))), " " 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSAT_Comments__c</fullName>
        <label>CSAT Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSAT_Status__c</fullName>
        <label>CSAT Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSAT__c</fullName>
        <formula>IMAGE( 
IF(ISPICKVAL(CSAT_Status__c, "Red"), "/resource/red", IF(ISPICKVAL(CSAT_Status__c, "Green"), "/resource/green", IF(ISPICKVAL(CSAT_Status__c, "Yellow"), "/resource/yellow", "/resource/green"))), " " 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSAT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Risk_Status__c</fullName>
        <formula>IMAGE( 
IF(ISPICKVAL(Other_Risks__c, "Red"), "/resource/red", IF(ISPICKVAL(Other_Risks__c, "Green"), "/resource/green", IF(ISPICKVAL(Other_Risks__c, "Yellow"), "/resource/yellow", "/resource/green"))), " " 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Risk Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Risks__c</fullName>
        <label>Other Risks</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipLabel>Project Status</relationshipLabel>
        <relationshipName>Project_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_Comments__c</fullName>
        <label>Resource Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resource_Status__c</fullName>
        <label>Resource Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <formula>IMAGE( 
IF(ISPICKVAL(Resource_Status__c, "Red"), "/resource/red", IF(ISPICKVAL(Resource_Status__c, "Green"), "/resource/green", IF(ISPICKVAL(Resource_Status__c, "Yellow"), "/resource/yellow", "/resource/green"))), " ")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Profile__c</fullName>
        <label>Risk Profile</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Schedule_Comments__c</fullName>
        <label>Schedule Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Schedule_Status__c</fullName>
        <label>Schedule Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <formula>IMAGE( 
IF(ISPICKVAL(Schedule_Status__c, "Red"), "/resource/red", IF(ISPICKVAL(Schedule_Status__c, "Green"), "/resource/green", IF(ISPICKVAL(Schedule_Status__c, "Yellow"), "/resource/yellow", "/resource/green"))), " " 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <color>#419249</color>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_date__c</fullName>
        <label>Status date</label>
        <type>Date</type>
    </fields>
    <label>Project Status</label>
    <nameField>
        <displayFormat>PS-{00}</displayFormat>
        <label>Project Status Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>